examples/invalid/program16.c
int main() {
    int x;
    x = 5;
    if (x > 0) else {
        return 1;
    }
    return 0;
}

